# cmake-environment-modification

./: CMakeLists.txt  README.md  main.c  main.cpp
.github/workflows/: ci.yml
